tests/snapshots/case__case_non_ascii@002.snap
---
source: tests/case.rs
description: "input: items [\"слово\", \"Слово\", \"СЛОВО\"]\noptions: --case smart\nafter:\n  @type \"слово\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  СЛОВО                                                                         "
"  Слово                                                                         "
"> слово                                                                         "
"  3/3                                                                        0/0"
"> слово                                                                         "
cursor: (24, 8)
