tests/snapshots/case__case_non_ascii@003.snap
---
source: tests/case.rs
description: "input: items [\"слово\", \"Слово\", \"СЛОВО\"]\noptions: --case smart\nafter:\n  @ctrl 'w'\n  @type \"Слово\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> Слово                                                                         "
"  1/3                                                                        0/0"
"> Слово                                                                         "
cursor: (24, 8)
