tests/snapshots/case__case_respect_exact@002.snap
---
source: tests/case.rs
description: "input: items [\"aBcDeF\"]\noptions: --case respect\nafter:\n  @type \"aBc\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> aBcDeF                                                                        "
"  1/1                                                                        0/0"
"> aBc                                                                           "
cursor: (24, 6)
