tests/snapshots/case__case_respect_lower@001.snap
---
source: tests/case.rs
description: "input: items [\"aBcDeF\"]\noptions: --case respect"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> aBcDeF                                                                        "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
