tests/snapshots/case__case_respect_lower@002.snap
---
source: tests/case.rs
description: "input: items [\"aBcDeF\"]\noptions: --case respect\nafter:\n  @type \"abc\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> abc                                                                           "
cursor: (24, 6)
