tests/snapshots/case__case_respect_no_match.snap
---
source: tests/case.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> aBcDeF                                                                        "
"  1/1                                                                        0/0"
">                                                                               "
